syntax = "proto3";

package mysqlprotobuf;

message JsonUnmarshalOptions {
  // If set, unknown fields are ignored during ProtoJSON unmarshal.
  // This option doesn't affect how to handle unknown enums. You need
  // to set ignore_unknown_enums if you want to ignore unknown enum values.
  bool ignore_unknown_fields = 1;

  // If set, unknown enum name values are ignored.
  // The enum field will remain default (0) or unset if the field
  // has a field presence enabled.
  bool ignore_unknown_enums = 2;
}

message JsonMarshalOptions {
  // For proto3, emit default-valued primitive fields, empty lists,
  // and empty maps. This option doesn't affect if the field has
  // a field presence.
  bool emit_default_values = 1;

  // NOT IMPLEMENTED: Emits enum values as numbers, instead of their names.
  // bool use_enum_numbers = 2;

  // NOT IMPLEMENTED - ONLY FOR INTERNAL USE.
  // Emits 64bit integer types (int64, uint64, fixed64, sfixed64, sint64) as numbers, instead of strings.
  // bool emit_int64s_as_numbers = 3;

  // NOT IMPLEMENTED - ONLY FOR INTERNAL USE.
  // Don't treat Well-known Types as special.
  // E.g. Timestamp becomes {"seconds": 61, "nanos": 123000000} instead of "1970-01-01T00:01:01.123Z".
  // bool treat_wkt_as_normal_types = 4;
}
