syntax = "proto3";

package mysqlprotobuf;

message MarshalOptions {
}

message UnmarshalOptions {
}
